# rs_rpi4_os

./: rust-toolchain.toml
01_wait_forever/: Cargo.toml  Makefile  build.rs
01_wait_forever/src/: bsp.rs
01_wait_forever/src/_arch/aarch64/cpu/: boot.s
02_runtime_init/: Cargo.toml  Makefile
02_runtime_init/src/: panic_wait.rs
02_runtime_init/src/_arch/aarch64/: cpu.rs
02_runtime_init/src/_arch/aarch64/cpu/: cpu.rs
02_runtime_init/src/bsp/raspberrypi/: kernel.ld
03_hacky_hello_world/src/: console.rs  cpu.rs  main.rs  panic_wait.rs  print.rs
03_hacky_hello_world/src/bsp/: raspberrypi.rs
03_hacky_hello_world/src/bsp/raspberrypi/: console.rs
04_safe_global/: Makefile
04_safe_global/src/: console.rs  main.rs
04_safe_global/src/_arch/aarch64/cpu/: boot.rs  boot.s
04_safe_global/src/bsp/raspberrypi/: console.rs
04_safe_global/tests/: boot_test_string.rb
05_drivers_gpio_uart/: Cargo.toml  Makefile
05_drivers_gpio_uart/src/: bsp.rs  console.rs  driver.rs  main.rs  print.rs  synchronization.rs
05_drivers_gpio_uart/src/_arch/aarch64/: cpu.rs
05_drivers_gpio_uart/src/bsp/: device_driver.rs  raspberrypi.rs
05_drivers_gpio_uart/src/bsp/device_driver/: bcm.rs  common.rs
05_drivers_gpio_uart/src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
05_drivers_gpio_uart/src/bsp/raspberrypi/: console.rs  driver.rs  memory.rs
05_drivers_gpio_uart/src/console/: null_console.rs
05_drivers_gpio_uart/tests/: boot_test_string.rb
common/: dispatch.rb  operating_system.mk
docker/rustembedded-osdev-utils/: Makefile
