[package]
name = "rs_rpi4_os"
version = "0.2.0"
edition = "2021"



[profile.release]
lto = true


[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
# platform specific dependencies
[target.'cfg(target_arch="aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }


